testsuite/bsc.names/portRenaming/invalidAttrs/result/Space.bsv

interface Ifc;
 (* result = "res  ult" *)
 method Bool check ();
endinterface

